--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,11 @@
     <title>{% block title %}{% endblock title%}</title>
   </head>
   <body>
-    {% block content %}
-    {% endblock content%}
+
+    <div class="container-fluid">
+        {% block content %}
+        {% endblock content%}
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
